# rust-rss-to-fedi

./: .dockerignore  .env  .env.sample  .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  coverage.sh  docker-compose.sample.yml  docker-compose.yml  index.html  notes.txt  sqlx-data.json  sync.sh
.github/workflows/: compile.yml  deploy.yaml  release.yml
.sqlx/: query-01f6a4c2ffa08d8a2a7ed24ebc9250ba0db5d097db80fae855f1fa381e0172b9.json  query-127d18d1e252038d0e8382bc6c03ff37ebbe97719d24d26f262513f0ac988ff9.json  query-157b39774f0f9fecd53676d3307d500b4f60a0b65bf7459f8e40cff2be82a8a7.json  query-1682ff9073a1af19e978fd34fff240cea9d1c5007c121526249820875b589191.json  query-1ab154415ade783957216b8893644446938a35cdce79507feccb571418b9d6af.json  query-1e9045f52c002a19b815351fee1c7ee7520478ff4f5886b4523fb0dc4df0e204.json  query-1edf705781e8fea4530e9f97c15fe066d28f6af0e08b2c908f36db5b7eed349f.json  query-2047f7e7d2eecb032b246b04c22896572968f5168c09c8ff9ed297886ff14304.json  query-22efefc78d39163ed973e5135ac9c0937097ee4415f01ef20615a182c0a38139.json  query-25ac895875e2e4250c1bf3dfe7be9dcf4974af3b0daee12cd0d7dfeb8cef6ff2.json  query-32229744dc40540f1ca7e0023309a32f9d2f6edfe2fcf0c999f70405af6917d7.json  query-3302f8d13e49dde2542e62aff4f31710335057a2e3e3366ebdab61d003267b59.json  query-35cf5791db6618517563c26b10650edbc0cada9c2ca0791ba7a860081f449883.json  query-39aadafcfc39f0a28c282ac7561cf6d3fbee9b03b3c84683e702fce730332939.json  query-3ba6968cef828826b502e633c155ad165810b60ea7bdfed8324ce1712e12c793.json  query-4427b48c5f2b1ed2878410e76ed57097467b0bdb3abe3e51e0ef4387b030c5eb.json  query-4d77ff4dfb547fb68d7fce179d33ff4509e8c1cf01dbe71c3f693d02a0a01793.json  query-4d7dfcc00b0a2893fca6f9bf32c1911e7afb53a3354196f4a0b7046b840757f9.json  query-4e3e0fdf04776ee17f5434b3814ed2fbe3408b677b4bd9b609834375dae698e8.json  query-51eb813de2b266dc47df6601ab8ac5d11603360037c4d8361a65dbf5a7b74c75.json  query-56189ffd6b9269eb82b47f45207ad5f48574740846e3b879a98a089500bc7e77.json  query-58140e7d207497fed95bd94114cfee4c31ba46ca049159f9bab55ccbbc92e280.json  query-5c2c82d201ac2a45e1af278aa0b8d8ed5d60f4fd674ab47fce2e899382ae863f.json  query-5cf49adf35248386fcabb73ce0ee0d59ba7decf11818119ade91808b5287e7d1.json  query-60ed3badee320677e743fcc064e1148d00611c75f5cd73f2bb9a310bb6c619da.json  query-63aae92260cad665f9c670def9271451fb0e31a3177e899e4eb393cc0f722212.json  query-65b6cccf28d15cd5495f7df2b30d41012dec5bc637b2a1ca8c3d162a25fbb4ce.json  query-66886d60ce0f23bfefd0b54e095de6cf4720eb823e565bb93a63884a8bd4d7bb.json  query-69f07967f37f786e507af8669f171467843e7838d8e27fc822fa4e244ab68e6c.json  query-6d7b99fa8d3c1c6d72646c421c8af46c8cd1047d4bb7651d220788159b430e94.json  query-6e881fe2060100b9180918be9da8257c9dcc9eaf4465caf274efc780c62cb58e.json  query-6fbdc8ade063017b6a517c7df770e31ffc3b506e1f86b163129acb305b5fec4b.json  query-754ba153110d91c682dcb5b4b2424994922969e0e842ad57415407e57c792267.json  query-78093ea0208bbb2860243d8f9457ae0a252d2bfdef07603beaeb06dd360864a5.json  query-79589d174eb487ea7ef94fa9dd217ff91f1c7f81250b55493c2d633bfc3c2803.json  query-798e88fc55d48982a4b33a78545d00e77ac13e3a698c7e95f413657b9e230aae.json  query-7a0b72b429dc4f603dcf08125dde2e1692e590bf7112db4ce61abecb35b2491b.json  query-843923b9a0257cf80f1dff554e7dc8fdfc05f489328e8376513124dfb42996e3.json  query-854d303e2d7790eab195c02ff22119058ab4e350e4606dae914a17eae9f4fd63.json  query-898f782a7a259084780a9cdc9ece45cb1c033c1ca3dcbe3dca7bf6529ea9ed44.json  (+44 more)
assets/: script.js  styles.css
fixtures/: actor.json  create-note-2.json  create-note.json  muffinista-key.json  muffinista.json  test_enclosures.xml  test_feed_link_in_guid.xml  test_feed_to_entries.xml  test_feed_to_entries_2.xml  test_html_with_feed_link.html  test_html_with_no_feed_link.html  test_mastodon_feed.xml
migrations/: 20221126191241_create-users.sql  20221126191242_create-feeds.sql  20221130005454_create-items.sql  20221130005455_create-followers.sql  20230126000001_add_enclosures.sql  20230128181141_make_columns_unique.sql  20230128195645_add-foreign-keys.sql  20230128213354_add-admin-marker.sql  20230130153719_add-actors.sql  20230201205913_add-feed-listed.sql  20230205210337_create-blocked-domains.sql  20230207001035_add-actor-inbox.sql  20230208001003_add-media-description.sql  20230209213119_add-actor-and-user-username.sql  20230210000614_make-follower-unique.sql  20230214142034_add-settings.sql  20230302144420_add-user-admin-toggle.sql  20230309183403_add-feed-last-post-at.sql  20230313132052_add-message-log.sql  20230316121353_add-feed-error-count.sql  20230704182747_add-feed-tweak-data.sql  20230906121802_MakeUsernameRequired.sql  20231109173337_track_token_update_timestamps.sql  20231117143350_add_feed_language.sql  20231117160446_add_item_language.sql  20231229165103_add-item-index.sql  20240424202857_add-enclosure-index.sql  20240817144611_AddActorIndexes.sql  20240817150227_AddItemIndexes.sql  20240817150421_AddMessageIndexes.sql  20241015204219_AddActorErrorCount.sql
migrations/2022-11-18-181650_create_users/: up.sql
migrations/2022-11-18-183102_create_email_tokens/: down.sql  up.sql
notes/: bot.json  cw.json  dm.json  feed.json  followers-initial.json  followers-only.json  followers-paged.json  followers.json  profile.json  unlisted.json  webfinger.json
scripts/: clippy  coverage.sh  init.sh  test
src/: error.rs  feed.rs  follower.rs  item.rs  keys.rs  lib.rs  mailer.rs  main.rs  schema.rs  server.rs  user.rs  utils.rs
src/activitystreams/: hashtag.rs  mod.rs
src/errors/: app_error.rs  delivery_error.rs  feed_error.rs  mod.rs
src/models/: actor.rs  blocked_domain.rs  enclosure.rs  feed.rs  feed_error.rs  follower.rs  item.rs  message.rs  mod.rs  nodeinfo.rs  sensitive_note.rs  setting.rs  user.rs
templates/: add-feed.html.tera  admin.html.tera  base.html.tera  default.html.tera  delete-feed.html.tera  edit-feed.html.tera  feed-admin.html.tera  feed.html.tera  feeds.html.tera  help.html.tera  home.html.tera  login-after.html.tera  login.html.tera  profile-value-link.html.tera
tester/: Gemfile  request.rb  server.rb  signature_verification.rb
(+54 files in other folders)
